<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="4dp"
        android:elevation="5dp"
        android:layout_marginEnd="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_coins"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:src="@drawable/coins"
                android:contentDescription="@string/default_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/main_add_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+10"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/activity_items_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:padding="4dp"
            android:background="@drawable/button_add"
            android:drawableEnd="@drawable/coins"
            android:text="@string/add_coins"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <include layout="@layout/content_main" />

</LinearLayout>